--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,13 @@ r:
   - oldrel
   - release
   - devel
-  
+
+arch:
+  - amd64
+  - ppc64le
+  - s390x
+  - arm64
+
 r_github_packages:
   - r-lib/covr
 
